fixes to make query interface work on mobile

--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -84,18 +84,3 @@ textarea.query {
 	width: 80%;
 }
 
-
-#dv_filters {
-  float: left;
-}
-
-#sharing_container {
-  right: 120px;
-  position: absolute;
-}
-
-#dv-report-filter-container {
-  width: 100%;
-  height: 50px;
-}
-
